--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url('/1200px-Bridge_in_green_woods_(Unsplash).jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
