--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <p>N</p>
+    <p>NKUZI</p>
   </div>
   <div class="middle">
-    <h1>COMING SOON</h1>
+    <h1>LAUNCHING SOON</h1>
     <hr>
-  </div>
-  <div class="bottomleft">
-    <p>Some text</p>
   </div>
 </div>
 
